data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_376.wast
;; 7. **Loop with Stack Unwinding Reaching Unreachable**:    - Create a loop in which stack unwinding from branches incorrectly leads to an `unreachable` instruction.    - **Constraint**: Checks proper stack unwinding and operand handling.    - **Relation to Unreachable Code Execution**: Validates stack unwinding does not erroneously place control flow on an `unreachable`.

(assert_invalid
  (module (func $loop-with-unwinding-unreachable
    (block (loop (result i32)
      (br 2)
      (unreachable)
    ))
  ))
  "type mismatch"
)